--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ main {
   display: flex;
   gap: 1rem;
   margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .box-icons {
@@ -120,6 +121,7 @@ main {
   right: -20%;
 }
 
+
 /* TABLET RESPONSE */
 @media (max-width: 1300px) {
   .content {
@@ -132,6 +134,17 @@ main {
     top: -20%;
     right: 2%;
     z-index: -1;
+  }
+}
+
+@media (max-width: 1300px) and (max-height: 699px) {
+  .robot-3d {
+    top: -5%;
+    right: 0;
+  }
+
+  .content {
+    margin-top: 25rem;
   }
 }
 
@@ -148,6 +161,7 @@ main {
     margin-left: 10%;
     margin-top: 25rem;
   }
+
   .tag-box {
     width: 12rem;
   }
@@ -166,7 +180,7 @@ main {
   }
 
   .btn-projects {
-    font-size: 0.8rem;
-    padding: 0.8rem 2rem;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
   }
 }
