--- a/css/projects.css
+++ b/css/projects.css
@@ -39,6 +39,7 @@
   gap: 4rem;
   width: 100%;
   margin-bottom: 2rem;
+
 }
 
 .project-imgbox {
@@ -52,6 +53,7 @@
 
 .project-imgbox img {
   width: 100%;
+  max-height: 300px;
   object-fit: cover;
   box-shadow: 0 0 10px lightgray;
   border-radius: 20px;
